--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "input-otp": "1.4.1",
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.454.0",
+    "motion": "^12.23.26",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
